@@ -16,33 +16,34 @@ class Updater extends SpecialPage
 	{
 		SpecialPage::SpecialPage("Updater");
 		self::loadMessages();	
-
 	}
 
 	function execute( $par ) 
 	{
 		global $wgRequest, $wgOut;
-                
-                $this->setHeaders();
+		
+		$this->setHeaders();
+		
+		# Get request data from, e.g.
+		$param = $wgRequest->getText('param');
 
-                # Get request data from, e.g.
-                $param = $wgRequest->getText('param');
-                
-        }
+		# Check Rights
+               
+	}
 
-		function loadMessages() 
-		{
-			static $messagesLoaded = false;
-			global $wgMessageCache;
-			if ( $messagesLoaded ) return;
-			$messagesLoaded = true;
-			
-			require( dirname( __FILE__ ) . '/Updater.i18n.php' );
-#			global $wgUpdaterMessages;
-			foreach ( $wgUpdaterMessages as $lang => $langMessages ) 
-			        $wgMessageCache->addMessages( $langMessages, $lang );
-
-        }
+	function loadMessages() 
+	{
+		static $messagesLoaded = false;
+		global $wgMessageCache;
+		if ( $messagesLoaded ) return;
+		$messagesLoaded = true;
+		
+		require( dirname( __FILE__ ) . '/Updater.i18n.php' );
+	#			global $wgUpdaterMessages;
+		foreach ( $wgUpdaterMessages as $lang => $langMessages ) 
+		        $wgMessageCache->addMessages( $langMessages, $lang );
+	
+	}
 
 } // END CLASS DEFINITION
 ?>
